Sun Aug 03 23:19:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimNotify.cpp:
	  - Fixed some translation stuff.

Sun Aug 03 23:11:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountBox.cpp:
	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimConnectionMeter.cpp:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimProtocolBox.cpp:
	* src/QGaimProtocolUtils.cpp:
	* src/QGaimProtocolUtils.h:
	  - The protocol icon loading functions now return a QPixmap instead
	    of a pointer to a QPixmap.

Sun Aug 03 23:04:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConnectionMeter.cpp:
	  - Prettied up the connection meter a little. Adding some margins,
	    spacing, and a protocol icon.

Sun Aug 03 22:57:32 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - When the last buddy in a group signs off, the group is removed
	    from view.

Sun Aug 03 22:49:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - The toolbar icons on the buddy list window display again.

Sun Aug 03 22:43:13 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimProtocolUtils.cpp:
	* src/main.cpp:
	  - We now use Resource::loadPixmap() to get our images.

Sun Aug 03 22:40:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	* mkstuff.conf:
	  - CVS snapshot packages now have a release of 0.$RELEASE.

Sun Aug 03 22:38:44 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* gaim.desktop:
	* mkipk.sh:
	* mkstuff.conf:
	* make.sh:
	  - Redid the build system.

Sun Aug 03 02:48:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h: