@@ -1,3 +1,9 @@
+Sun Aug 03 23:48:26 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimConvWindow.h:
+	  - Added basic chat UI support.
+
 Sun Aug 03 23:19:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimNotify.cpp:
